docs/api/qiskit/0.43/qiskit.transpiler.passes.BasisTranslator.md
---
title: BasisTranslator
description: API reference for qiskit.transpiler.passes.BasisTranslator
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.BasisTranslator
---

# BasisTranslator

<span id="qiskit.transpiler.passes.BasisTranslator" />

`BasisTranslator(*args, **kwargs)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/transpiler/passes/basis/basis_translator.py "view source code")

Bases: [`TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

Translates gates to a target basis by searching for a set of translations from a given EquivalenceLibrary.

This pass operates in several steps:

*   Determine the source basis from the input circuit.
*   Perform a Dijkstra search over basis sets, starting from the device’s target\_basis new gates are being generated using the rules from the provided EquivalenceLibrary and the search stops if all gates in the source basis have been generated.
*   The found path, as a set of rules from the EquivalenceLibrary, is composed into a set of gate replacement rules.
*   The composed replacement rules are applied in-place to each op node which is not already in the target\_basis.

If the target keyword argument is specified and that [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") objects contains operations which are non-global (i.e. they are defined only for a subset of qubits), as calculated by [`get_non_global_operation_names()`](qiskit.transpiler.Target#get_non_global_operation_names "qiskit.transpiler.Target.get_non_global_operation_names"), this pass will attempt to match the output translation to those constraints. For 1 qubit operations this is straightforward, the pass will perform a search using the union of the set of global operations with the set of operations defined solely on that qubit. For multi-qubit gates this is a bit more involved, while the behavior is initially similar to the single qubit case, just using all the qubits the operation is run on (where order is not significant) isn’t sufficient. We also need to consider any potential local qubits defined on subsets of the quantum arguments for the multi-qubit operation. This means the target used for the search of a non-global multi-qubit gate is the union of global operations, non-global multi-qubit gates sharing the same qubits, and any non-global gates defined on any subset of the qubits used.

<Admonition title="Note" type="note">
  In the case of non-global operations it is possible for a single execution of this pass to output an incomplete translation if any non-global gates are defined on qubits that are a subset of a larger multi-qubit gate. For example, if you have a `u` gate only defined on qubit 0 and an `x` gate only on qubit 1 it is possible when translating a 2 qubit operation on qubit 0 and 1 that the output might have `u` on qubit 1 and `x` on qubit 0. Typically running this pass a second time will correct these issues.
</Admonition>

<span id="id1" />

## Translation Errors

This pass will error if there is no path to translate an input gate to the specified basis. However, during a typical/default preset passmanager this pass gets run multiple times at different stages of the compilation pipeline. This means that potentially the input gates that are getting translated were not in the input circuit to [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") as they were generated by an intermediate transform in the circuit.

When this error occurs it typically means that either the target basis is not universal or there are additional equivalence rules needed in the :clas:\~.EquivalenceLibrary\` instance being used by the :class:\~.BasisTranslator\` pass. You can refer to [Custom Basis Gates](providers#custom-basis-gates) for details on adding custom equivalence rules.

Initialize a BasisTranslator instance.

**param equivalence\_library**

The equivalence library which will be used by the BasisTranslator pass. (Instructions in this library will not be unrolled by this pass.)

**type equivalence\_library**

EquivalenceLibrary

**param target\_basis**

Target basis names to unroll to, e.g. \[‘u3’, ‘cx’].

**type target\_basis**

list\[str]

**param target**

The backend compilation target

**type target**

Target

## Methods

<span id="qiskit-transpiler-passes-basistranslator-name" />

### name

<span id="qiskit.transpiler.passes.BasisTranslator.name" />

`BasisTranslator.name()`

Return the name of the pass.

<span id="qiskit-transpiler-passes-basistranslator-run" />

### run

<span id="qiskit.transpiler.passes.BasisTranslator.run" />

`BasisTranslator.run(dag)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/transpiler/passes/basis/basis_translator.py "view source code")

Translate an input DAGCircuit to the target basis.

**Parameters**

**dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – input dag

**Raises**

[**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if the target basis cannot be reached

**Returns**

translated circuit.

**Return type**

[DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")

## Attributes

<span id="qiskit.transpiler.passes.BasisTranslator.is_analysis_pass" />

### is\_analysis\_pass

Check if the pass is an analysis pass.

If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.

<span id="qiskit.transpiler.passes.BasisTranslator.is_transformation_pass" />

### is\_transformation\_pass

Check if the pass is a transformation pass.

If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).

